deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: maze-web
  name: maze-web
  namespace: maze-web
spec:
  host: maze.cs.house
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: maze-web
    weight: 100
  wildcardPolicy: None
